# GalacticEngine3D

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  TwilightEngine  fbx_check  fbx_check.cpp  fbxcheck.cpp  makefile
engine/: renderer.cpp
include/: TwilightEngine.h
models/testmap1/: map.fbx
shaders/: bloom_blur.frag  bloom_composite.frag  button.vert  hud.frag  hud.vert  mat4_lit_bloom.frag  mat5_normal_map.frag  mat6_water.frag  mat8_pbr.frag  material.vert  sky.frag  title.frag  title.vert  title_image.frag
src/: renderer.cpp
